--- a/pages/my_page.html
+++ b/pages/my_page.html
@@ -2,23 +2,24 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мои дела</title>
-    <link rel="stylesheet" href="../styles/style.css">
-    <script type="module">
-        import addComponent from '../scripts/add-component.js'
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Мои дела</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+	<script type="module">
+		import addComponent from '../scripts/add-component.js'
 		import createTodoList from '../scripts/todo-app/main.js'
 
-        addComponent('../components/header.html', 'header')
-        createTodoList('me', '.container');
-    </script>
+		addComponent('../components/header.html', 'header')
+		createTodoList('me', '.app');
+	</script>
 </head>
 
-<body>
-    <header></header>
-    <div class="container"></div>
+<body data-bs-theme="dark">
+	<header class="bg-body-tertiary"></header>
+	<div class="container app"></div>
 </body>
 
 </html>
